Added new images to the index.html and added further styling to css.

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p>Paper covers Rock. You Win!</p>
     </div>
     <div class="choices">
-        <div id="r" class="choice"><img src="assets/images/rock.png" alt="rock"</div>
-        <div id="p" class="choice"><img src="assets/images/paper.png" alt="paper"</div>
-        <div id="s" class="choice"><img src="assets/images/scissors.png" alt="scissors"</div>
+        <div id="r" class="choice"><img src="assets/css/images/rock2.png" alt="rock"</div>
+        <div id="p" class="choice"><img src="assets/css/images/paper2.png" alt="paper"</div>
+        <div id="s" class="choice"><img src="assets/css/images/scissors2.png" alt="scissors"</div>
     </div>
     <p id="action-message">Make Your Move</p>
 </body>
